@@ -134,7 +134,7 @@ libumockdev_la_LIBADD =		\
 # see http://www.gnu.org/software/libtool/manual/html_node/Updating-version-info.html
 libumockdev_la_LDFLAGS =	\
 	$(AM_LDFLAGS)		\
-	-version-info 0:0:0	\
+	-version-info 1:0:1	\
 	-export-dynamic -no-undefined \
 	-export-symbols-regex '^umockdev_.*' \
 	$(NULL)
